--- a/static/print-person.css
+++ b/static/print-person.css
@@ -1,7 +1,3 @@
-@page {
-  size: landscape;
-}
-
 table th:first-child,
 table td:first-child,
 table th:last-child,
@@ -9,6 +5,48 @@ table td:last-child {
   display: none;
 }
 
+table td:nth-child(2)::after {
+  content: '.';
+}
+
 table td:nth-child(3), table td:nth-child(10) {
   text-align: justify;
+}
+
+.semester {
+  page-break-after: always;
+}
+
+.underline {
+  color: transparent;
+  border-bottom: 1px solid #000000;
+}
+
+.person {
+  position: fixed;
+  top: 1rem;
+  opacity: 0.65;
+  letter-spacing: 0.1ch;
+  font-size: 14pt;
+  z-index: 99;
+  float: right;
+  right: 1rem;
+}
+
+.updated {
+  position: absolute;
+  z-index: 99;
+  float: left;
+  left: 1.5rem;
+  font-size: 14pt;
+  margin-top: .5rem;
+}
+
+.department {
+  position: absolute;
+  z-index: 99;
+  float: right;
+  right: 1.5rem;
+  font-size: 14pt;
+  margin-top: .5rem;
 }
