--- a/static/print.css
+++ b/static/print.css
@@ -3,21 +3,13 @@
   margin-bottom: 1cm;
   margin-right: 0.5cm;
   margin-left: 0.5cm;
+  size: A4;
 }
 
 table {
   border-collapse: collapse;
   page-break-inside: avoid;
-  page-break-after: always;
   min-width: 100%;
-}
-
-table th {
-  font-size: 12pt;
-}
-
-table td {
-  font-size: 14pt;
 }
 
 table th,
@@ -28,6 +20,7 @@ table td {
   overflow: hidden;
   border: 1px solid #000000;
   padding: 3px;
+  font-size: 12pt;
   color: #000000;
 }
 
@@ -37,6 +30,6 @@ hr {
 
 h5 {
   padding: 0;
-  font-size: 16pt;
-  margin: 10px;
+  font-size: 14pt;
+  margin: 15px;
 }
