--- a/static/style.css
+++ b/static/style.css
@@ -38,6 +38,10 @@ v-dialog {
   z-index: 1000;
 }
 
+#login-form {
+  max-width: 550px;
+}
+
 .home-link {
   font-weight: bold;
   font-size: 20px;
